# grid-telemetry

./: .dockerignore  .env  .env.example  .gitignore  PRODUCT.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/: Dockerfile  main.py
backend/core/: cache.py  config.py
backend/db/: base.py  models.py  service.py
backend/db/migrations/: env.py
backend/db/migrations/versions/: c49b199a6ffd_create_telemetry_and_warning_tables.py
backend/schemas/: telemetry.py
backend/services/: f1_service.py  thermal_engine.py
backend/workers/: telemetry_worker.py
frontend/: Dockerfile  components.json  nuxt.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/assets/css/: globals.css
frontend/app/components/: CarVisualizer.vue  DriverCard.vue  HealthScoreRing.vue  LightSpeedBackground.vue  MasterWarningPanel.vue  TelemetryChart.vue  TelemetryGauges.vue  ThermalPanel.vue  TrackMap.vue  TyreStatusCard.vue  WarningHistoryPanel.vue
frontend/app/composables/: useTelemetrySocket.ts  useThermalState.ts
frontend/app/lib/: api.ts  types.ts
frontend/app/pages/: index.vue
frontend/assets/css/: globals.css
frontend/components/: DriverCard.vue  HealthScoreRing.vue  MasterWarningPanel.vue  TelemetryChart.vue  TelemetryGauges.vue
frontend/composables/: useHealthScore.ts  useTelemetrySocket.ts
frontend/lib/: api.ts  types.ts
frontend/pages/: index.vue
grid-telemetry/: main.py  pyproject.toml
tests/: test_thermal_engine.py  test_thermal_worker.py
